--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="bg-white w-full max-w-md mx-4 p-8 rounded-3xl soft-shadow text-center transition-all duration-500">
         
         <header class="flex items-center justify-center mb-6">
-            <h1 class="text-3xl font-bold text-pink-500">Cantinho de Carinho</h1>
+            <h1 class="text-3xl font-bold text-pink-500">Seu Cantinho</h1>
             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 ml-2 text-pink-400" viewBox="0 0 24 24" fill="currentColor"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
         </header>
 
@@ -45,7 +45,7 @@
                 <div class="w-3 h-3 bg-pink-400 rounded-full animate-pulse-dot"></div>
                 <div class="w-3 h-3 bg-pink-400 rounded-full animate-pulse-dot"></div>
             </div>
-            <p id="message-display" class="text-lg text-gray-600">Clique em "Gerar Afeto" para uma mensagem especial!</p>
+            <p id="message-display" class="text-lg text-gray-600">Clique em "Gerar Afeto"!</p>
         </div>
 
         <div class="space-y-4">
